# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
data/: save.json
headers/: game_save_data.hpp
headers/game_core/: controller.h  game.h  renderer.h
headers/game_field/: game_field.hpp  game_field_state.hpp  gamefield_factory.hpp  gameplay_manager.hpp  null_game_field.hpp  player_game_field.hpp
headers/game_state/: game_state_factory.hpp  game_state_manager.hpp  game_state_type.hpp  game_states.hpp  main_menu_state.hpp  multiplayer_state.hpp  pause_state.hpp  single_player_state.hpp
headers/player/: a_star_async.hpp  ai_player.hpp  player.hpp  player_id.hpp  snake.h
headers/screen/: main_menu_screen.hpp  multiplayer_screen.hpp  pause_screen.hpp  screen.hpp  single_player_screen.hpp
libxcrypt/: portfile.cmake  strict-overflow.patch
sources/: game_save_data.cpp  main.cpp
sources/game_core/: controller.cpp  game.cpp  renderer.cpp
sources/game_field/: game_state_factory.cpp  gamefield_factory.cpp  gameplay_manager.cpp  player_game_field.cpp
sources/game_state/: game_state_manager.cpp  game_states.cpp  main_menu_state.cpp  multiplayer_state.cpp  pause_state.cpp  single_player_state.cpp
sources/player/: a_star_async.cpp  (+3 more)
src/: a_star_async.hpp  cell_type.hpp  controller.cpp  controller.h  game.cpp  game.h  game_field.hpp  game_save_data.hpp  game_state_factory.hpp  game_state_manager.hpp  game_state_model.hpp  game_state_type.hpp  game_states.hpp  gamefield_factory.hpp  gameplay_manager.hpp  main.cpp  move_direction.hpp  player.hpp  player_id.hpp  renderer.cpp  renderer.h  screen.hpp  snake.cpp  snake.h
(+4 files in other folders)
